[tool.poetry]
name = "clerk-sdk"
version = "0.1.0"
description = "A sample SDK for the clerk API"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "clerk_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[tool.poetry.scripts]
lint = "black clerk_sdk"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
